--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="container">
                <div class="row">
                   <div class="col-sm-12">
-                     <div class="logo"><a href="index.html"><img src="images/bfcw.png"></a></div>
+                     <div class="logo"><a href="index.html"><img src="images/BFCw-logo.png"></a></div>
                   </div>
                </div>
             </div>
